--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,6 +7,11 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  S3_BUCKET_NAME: was-deploy
+  CODE_DEPLOY_APPLICATION_NAME: was-ec2
+  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: was-codedeploy
+
 jobs:
   build:
 
