--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -52,6 +52,10 @@ jobs:
               --ignore-hidden-files \\
               --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \\
               --source .
+      env:
+        S3_BUCKET_NAME: was-deploy
+        CODE_DEPLOY_APPLICATION_NAME: was-ec2-deploy
+        CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: was-codedeploy
 
     # (6) S3버킷에 있는 파일을 대상으로 CodeDeploy실행
     - name: Deploy to AWS EC2 from S3
