--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,12 @@ jobs:
     # gradlew 실행 권한 부여
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
+    # (3) Gradle build (Test제외)
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+      with:
+          arguments: clean build -x test
       
     # AWS 인증 (IAM사용자 Access Key, Secret Key활용)
     - name: Configure AWS credentials
