--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,14 +44,17 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
 
-    # (5)빌드 결과물을 S3버킷에 업로드
-    - name: Upload to AWS S3
-      run: |
-            aws deploy push 
-              --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} 
-              --ignore-hidden-files 
-              --s3-location s3:$S3_BUCKET_NAME/$GITHUB_SHA.zip 
-              --source .
+    # # (5)빌드 결과물을 S3버킷에 업로드
+    - name: Upload to S3
+      run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
+      
+    # - name: Upload to AWS S3
+    #   run: |
+    #         aws deploy push 
+    #           --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} 
+    #           --ignore-hidden-files 
+    #           --s3-location s3:$S3_BUCKET_NAME/$GITHUB_SHA.zip 
+    #           --source .
 
     # (6) S3버킷에 있는 파일을 대상으로 CodeDeploy실행
     - name: Deploy to AWS EC2 from S3
