--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,6 +31,11 @@ jobs:
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+
+      # build한 후 프로젝트를 압축한다.
+    - name: Make zip file
+      run: zip -r ./practice-deploy.zip .
+      shell: bash
       
     # gradlew 실행 권한 부여
     - name: Grant execute permission for gradlew
