--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,7 +49,7 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
 
-    # # (5)빌드 결과물을 S3버킷에 업로드
+    # (5)빌드 결과물을 S3버킷에 업로드
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
       
@@ -64,10 +64,10 @@ jobs:
     # (6) S3버킷에 있는 파일을 대상으로 CodeDeploy실행
     - name: Deploy to AWS EC2 from S3
       run: |
-          aws deploy create-deployment \\
-            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \\
-            --deployment-config-name CodeDeployDefault.AllAtOnce \\
-            --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \\
+          aws deploy create-deployment 
+            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} 
+            --deployment-config-name CodeDeployDefault.AllAtOnce 
+            --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} 
             --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
 
   dependency-submission:
