--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source:  /
-    destination: /home/ubuntu/app
+    destination: /home/ubuntu/app # 이 디렉토리 내에 배포가 진행된다
     overwrite: yes
 
 permissions:
@@ -17,7 +17,8 @@ hooks:
     - location: scripts/stop.sh
       timeout: 60
       runas: ubuntu
+
   ApplicationStart:
-    - location: scripts/start.sh
+    - location: scripts/start.sh  #최상위 디렉토리의 script 폴더 내의 shell script가 실행된다.
       timeout: 60
       runas: ubuntu
