--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -63,7 +63,7 @@ jobs:
 
     # (6) S3버킷에 있는 파일을 대상으로 CodeDeploy실행
     - name: Deploy to AWS EC2 from S3
-      run: |
+      run: 
           aws deploy create-deployment 
             --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} 
             --deployment-config-name CodeDeployDefault.AllAtOnce 
