--- a/appspec.yml
+++ b/appspec.yml
@@ -13,12 +13,7 @@ permissions:
     group: ubuntu
 
 hooks:
-  AfterInstall:
-    - location: scripts/stop.sh
-      timeout: 60
-      runas: ubuntu
-
   ApplicationStart:
-    - location: scripts/start.sh  #최상위 디렉토리의 script 폴더 내의 shell script가 실행된다.
+    - location: scripts/deploy.sh  #최상위 디렉토리의 script 폴더 내의 shell script가 실행된다.
       timeout: 60
       runas: ubuntu
