--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,14 +32,18 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
+    # gradlew 실행 권한 부여
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      
+    # 프로젝트 build
+    - name: Build with Gradle
+      run: ./gradlew clean build
+
       # build한 후 프로젝트를 압축한다.
     - name: Make zip file
       run: zip -r ./$GITHUB_SHA.zip .
       shell: bash
-      
-    # gradlew 실행 권한 부여
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
       
     # AWS 인증 (IAM사용자 Access Key, Secret Key활용)
     - name: Configure AWS credentials
