--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source:  /
-    destination: /home/ubuntu/app/deploy # 이 디렉토리 내에 배포가 진행된다
+    destination: /home/ubuntu/action # 이 디렉토리 내에 배포가 진행된다
     overwrite: yes
 
 permissions:
