--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,18 @@
-server.port: 8080
-spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://was-db.czik6cyqij6g.ap-northeast-2.rds.amazonaws.com:3306/wasdb?serverTimezone=UTC&characterEncoding=UTF-8
-    username: admin
-    password: Si8zcqt5!
-
 #server.port: 8080
 #spring:
 #  datasource:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/was_db?serverTimezone=UTC&characterEncoding=UTF-8
-#    username: root
+#    url: jdbc:mysql://was-db.czik6cyqij6g.ap-northeast-2.rds.amazonaws.com:3306/wasdb?serverTimezone=UTC&characterEncoding=UTF-8
+#    username: admin
 #    password: Si8zcqt5!
+
+server.port: 8080
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/was_db?serverTimezone=UTC&characterEncoding=UTF-8
+    username: root
+    password: Si8zcqt5!
 
   security:
     allow-localhost: true
